
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






union bpf_attr {int value; int key; int map_fd; } ;
typedef int attr ;
typedef int __u64 ;


 int BPF_MAP_LOOKUP_ELEM ;
 int __NR_bpf ;
 int mapfd ;
 int syscall (int ,int ,union bpf_attr*,int) ;

__attribute__((used)) static int bpf_lookup_elem(void *key, void *value) {
 union bpf_attr attr = {
  .map_fd = mapfd,
  .key = (__u64)key,
  .value = (__u64)value,
 };

 return syscall(__NR_bpf, BPF_MAP_LOOKUP_ELEM, &attr, sizeof(attr));
}
