; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_44298.c_bpf_lookup_elem.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_44298.c_bpf_lookup_elem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.bpf_attr = type { i32 }

@__NR_bpf = common dso_local global i32 0, align 4
@BPF_MAP_LOOKUP_ELEM = common dso_local global i32 0, align 4
@mapfd = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @bpf_lookup_elem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bpf_lookup_elem(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %union.bpf_attr, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = bitcast %union.bpf_attr* %5 to i32*
  %7 = load i8*, i8** %4, align 8
  %8 = ptrtoint i8* %7 to i32
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* @__NR_bpf, align 4
  %10 = load i32, i32* @BPF_MAP_LOOKUP_ELEM, align 4
  %11 = call i32 @syscall(i32 %9, i32 %10, %union.bpf_attr* %5, i32 4)
  ret i32 %11
}

declare dso_local i32 @syscall(i32, i32, %union.bpf_attr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
